# jupyterlite-extension-broken

./: .gitignore  .prettierignore  HACKING.md  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
demo/: jupyter-lite.json  requirements.txt
jupyterlite_nbconvert/: __init__.py
src/: index.ts
